2012-09-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-e20.el (coding-system-to-mime-charset): Coding system's
	setting is preferred to mime-charset-coding-system-alist's value.
	Detect MIME name from mime-charset-coding-system-alist's value
	more permissively.

2012-08-08  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* poe.el (next-command-event): Fix that Emacs 21 and later were
	treated as 'Emacs 19, 20.1 and 20.2'.

2012-07-28  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-e20.el (charsets-mime-charset-alist): Do not use
	`iso-2022-jp-2'.

2012-07-28  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-20.el (detect-mime-charset-string): (Emacs23 and later) New
	function.
	(detect-mime-charset-region): Use it.

2012-04-27  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.ja (MAKEIT.BAT): Modify for apel-ja@lists.chise.org.

2012-04-27  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.ja, README.en: Remove descriptions about CVS and add
	description about the new Git repository.

2012-04-27  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.en (make.bat (for MS-DOS family)): Modify for
	apel-en@lists.chise.org.

2012-04-26  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.ja, README.en (Bug reports): Modify for
	apel-{en|ja}@lists.chise.org.

2011-06-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-20.el (detect-mime-charset-region): (Emacs23 and later) Do
	not check whether `charsets-mime-charset-alist' contains non
	charset symbol.

	* mcs-e20.el (charsets-mime-charset-alist): Remove non charset
	symbol for Emacs 23 and later.

2010-10-06  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* mcs-xm.el (charsets-mime-charset-alist):
	- Don't use `japanese-jisx0208-1990' for `iso-2022-jp'
	- Don't use `iso-2022-jp-3'
	- Use `utf-8' instead of `shift_jis' for
	  '(ascii latin-jisx0201 katakana-jisx0201 japanese-jisx0208-1990)
	- Don't use `iso-2022-jp-2'


2010-06-15  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* APEL: Version 10.8 released.
